welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
    		avance();
                      ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    	if(getCouleurSol()==Color.green){
        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==false){
    ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estSurBiscuit==false){ 
  ^