welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if(estSurBiscuit==false){ 
    if(estFaceMur==false){
    	avance();
    	if(getCouleurSol()==Color.green){
    		recule();
    		baisseBrosse();
    		leveBrosse();
    		return true;
    		{
    		recule();
    		gauche();
    		avance();
    		}
    		
    	}
    }
}        
}